# meta

./: .git-scopes  .gitignore  CLAUDE.md  CONSTITUTION.md  CYCLE.md  GOALS.md  TODOS.md  action-plan.md  agent-failure-modes.md  agent_infra_mcp.py  autonomous-agent-architecture.md  claude-code-architecture.md  cockpit.md  constitutional-delta.md  frontier-agentic-models.md  harness-changelog.md  human-instructions.md  ideas.md  improvement-log.md  justfile  maintenance-actions.jsonl  maintenance-checklist.md  meta_mcp.py  philosophy-of-epistemic-agents.md  pyproject.toml  review-action-plan.md  runlog.md  search-mcp-plan.md  search-retrieval-architecture.md  setup-friend.sh  system-architecture.md  todos.md
.claude/: overview-marker-source  overview.conf  settings.json  settings.local.json
.context/: Makefile
.model-review/: 2026-02-28-orchestrator-synthesis.md
.scratch/: claim-bench-paper-briefs.md  claim-bench-s2-targeted-sweep.md  db-freshness-probe.md  extract-sessions.py  genomics-retro-synthesis.md  parallel-task-claim-bench-synthesis.md  parallel-task-raw.txt  session-analysis.json  session-extracts.json  vendor-sweep-2026-04-07.md
benchmarks/: comparison-report.md  ebf3-research-prompt.md  output-academic.md  output-combined.md  output-websearch.md
claim_bench/: pyproject.toml
claim_bench/cases/: 005_mixed_red_wine_mortality.json  006_insufficient_evidence_proteasome_cryoem.json
claim_bench/hooks/: freshness_advisory.sh
claim_bench/src/claim_bench/: __init__.py  atomic_claim.py  cards.py  decision.py  inspect_adapter.py  ledger.py  meta_claim.py  process_metrics.py  scorer.py  task.py  tools.py  ttl.py  types.py  verifier.py
claim_bench/tests/: conftest.py  test_decision.py  test_defensive_g4_g5.py  test_import_graph.py  test_inspect_adapter.py  test_integration_cross_project.py  test_ledger.py  test_meta_claim.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_ttl.py  test_types.py  test_verifier.py
claim_bench/tests/fixtures/: synthetic_adapter.py
decisions/: .template.md  2026-03-07-decision-journal-convention.md  2026-03-17-shared-knowledge-substrate.md  2026-03-20-retire-repo-tools-mcp.md  2026-04-10-agent-entity-surveillance.md
pipelines/: agent-entity-refresh.json  algorithm-provenance-audit.json  algorithm-provenance-audit.md  code-review-sweep.json  correction-sweep.json  cross-project-drift.json  deep-dive.json  design-review.json  domain-research-cycle.json  earnings-refresh.json  entity-refresh.json  (+28 more)
(+576 files in other folders)
