[project]
name = "meta-mcp"
version = "0.1.0"
description = "Meta project knowledge base — hook designs, failure modes, architecture decisions"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.84.0",
    "claude-agent-sdk>=0.1.44",
    "exa-py>=2.6.1",
    "fastmcp>=3.0",
    "openai>=2.24.0",
]

[project.scripts]
meta-mcp = "meta_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
