[project]
name = "meta-mcp"
version = "0.1.0"
description = "Meta project knowledge base — hook designs, failure modes, architecture decisions"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.84.0",
    "claude-agent-sdk>=0.1.44",
    "exa-py>=2.6.1",
    "fastmcp>=3.0,<4.0",
    "parallel-web>=0.4.0",
]

[project.scripts]
meta-mcp = "meta_mcp:main"
parallel-mcp = "scripts.parallel_mcp:main"

[tool.pyright]
typeCheckingMode = "basic"
exclude = ["artifacts/", "downloads/", "bundles/", ".claude/worktrees/"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-timeout>=2.4.0",
]
