[project]
name = "agent-infra"
version = "0.1.0"
description = "Meta project knowledge base — hook designs, failure modes, architecture decisions"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.84.0",
    "claude-agent-sdk>=0.1.44",
    "exa-py>=2.6.1",
    "fastmcp>=3.0,<4.0",
    "google-genai>=1.72.0",
    "inspect-ai>=0.3.0",
    "openai>=2.26.0",
    "parallel-web>=0.4.0",
]

[project.scripts]
agent-infra-mcp = "agent_infra_mcp:main"
parallel-mcp = "scripts.parallel_mcp:main"

[tool.pyright]
typeCheckingMode = "basic"
exclude = ["artifacts/", "downloads/", "bundles/", ".claude/worktrees/"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-timeout>=2.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
